--- a/src/translations/spanish/global.json
+++ b/src/translations/spanish/global.json
@@ -4,7 +4,11 @@
         "about": "Acerca",
         "portfolio": "Portfolio",
         "services": "Servicios",
-        "contact": "Contacto"
+        "contact": "Contacto",
+        "certificate": "Certificado"
+    },
+    "certificate": {
+        "certificate": "Certificado"
     },
     "banner": {
         "greeting": "¡ Hola !",
